[package]
name = "ckb-lua-scripts"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = {package = "ckb-std", git = "https://github.com/duanyytop/ckb-std", branch="develop"}
ckb-lib-lua = { path = "../../ckb-lib-lua" }
